--- a/org/sep/index.html
+++ b/org/sep/index.html
@@ -2,7 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <script src="jquery-3.3.1.min.js"></script>
+    <script src="jquery.csv.js"></script>
+    <script src="test.js"></script>
+
+    <title>Title_something</title>
+    <input type="submit" value="Ready!" onclick="readText(); return false;" />
+    <div id="text"> </div>
 </head>
 <body>
 
